tests/errors/from_yaml_missing_field.dang
enum Status { PASSED FAILED }

type Child {
  name: String!
  outcome: Status!
}

type Summary {
  children: [Child!]!
}

let summary: Summary! = YAML.decode("""
children:
  - name: one
""")
